--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Emblema+One|Lora&display=swap" rel="stylesheet">
 </head>
 <body>
-
+<div id="wrapper">
 	<header>
         <div class="tab-desk">
 		  <a href="index.html"><img src="images/baby-hawk.jpg" alt="rescued baby hawk"></a>
@@ -41,7 +41,8 @@
         <div id="contact">
             
             <h2>You can reach us at:</h2>
-            <p class="tel-link round"><a href="tel:8145558989">(814) 555-8989</a></p>
+            <p class="mobile""tel-link round"><a href="tel:8145558989">(814) 555-8989</a></p>
+			<p class="tab-desk"> (814) 555-9228 </p>
             <p>Email: <a href="mailto:contact@wildrescues.net" class="link">contact@wildrescues.net</a></p>
             <p>Address: <a href="https://goo.gl/maps/BTJzjc2tALd4RDWA8" target="_blank" class="link">8989 Rescue Drive, Ocala, FL 34471</a></p>
             
@@ -53,6 +54,6 @@
 		<p>&copy; Copyright 2021. All Rights Reserved.</p>
 		<p><a href="mailto:contact@wildrescues.net">contact@wildrescues.net</a></p>
 	</footer>
-	
+	</div>
 </body>
 </html>
