--- a/template.html
+++ b/template.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Emblema+One|Lora&display=swap" rel="stylesheet">
 </head>
 <body>
-
+ <div id="wrapper">
 	<header>
         <div class="tab-desk">
 		  <a href="index.html"><img src="images/baby-hawk.jpg" alt="rescued baby hawk"></a>
@@ -47,6 +47,6 @@
 		<p>&copy; Copyright 2021. All Rights Reserved.</p>
 		<p><a href="mailto:contact@wildrescues.net">contact@wildrescues.net</a></p>
 	</footer>
-	
+	</div>
 </body>
 </html>
