--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 	<meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Emblema+One|Lora&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Emblema+One%7CLora&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="wrapper">
@@ -41,7 +41,7 @@
         <div id="contact">
             
             <h2>You can reach us at:</h2>
-            <p class="mobile""tel-link round"><a href="tel:8145558989">(814) 555-8989</a></p>
+            <p class="mobile tel-link round"><a href="tel:8145558989">(814) 555-8989</a></p>
 			<p class="tab-desk"> (814) 555-9228 </p>
             <p>Email: <a href="mailto:contact@wildrescues.net" class="link">contact@wildrescues.net</a></p>
             <p>Address: <a href="https://goo.gl/maps/BTJzjc2tALd4RDWA8" target="_blank" class="link">8989 Rescue Drive, Ocala, FL 34471</a></p>
